Sidebar title no longer appears on narrow screens.

--- a/navbar/navbar_main.css
+++ b/navbar/navbar_main.css
@@ -92,6 +92,7 @@ a.navlink {
     }
 
     #sublink {display:none;}
+    #site_title {display:none;}
 }
 
 
